# swiftmock

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish_package.yml
docs/: conf.py  index.rst  swiftmock.fixtures.rst  swiftmock.rst  swiftmock.swift.rst
news/: 1.feature.rst
src/swiftmock/: fixtures.py  swift.py
tasks/: __init__.py
tests/: conftest.py  test_account.py  test_container.py  test_object.py
