[metadata]
name = swiftmock
description = A mock backend for testing swift.
url = https://github.com/canonical/swiftmock
author = Dan Ryan
author_email = dan.ryan@canonical.com
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: swiftmock.__version__
license = ISC License
keywords = openstack, swift, pytest, mock
project_urls =
    Source Code = https://github.com/canonical/swiftmock
    Change Log = https://github.com/canonical/swiftmock/CHANGES.rst
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: ISC License (ISCL)
    Framework :: Pytest
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options.extras_require]
tests =
    pytest-timeout
    readme-renderer[md]
    twine
release =
    parver
    towncrier
lint =
    black
    flake8
    flake8-bugbear
    isort
    mypy
dev =
    invoke
    pre-commit
    rope

[options]
zip_safe = true
python_requires = >=3.6
setup_requires = setuptools>=40.8.0
include_package_data = true
package_dir =
    = src
install_requires =
    requests
    python-swiftclient
    pytest>=4.4.0

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    swift_mock = swiftmock.fixtures

[bdist_wheel]
universal = 1

[tool:pytest]
strict = true
plugins = flake8
addopts = -ra
testpaths = tests/
norecursedirs = .* build dist news tasks docs
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[isort]
atomic = true
not_skip = __init__.py
line_length = 88
indent = '    '
multi_line_output = 3
known_third_party = invoke,parver,pytest,requests,setuptools,swiftclient,towncrier
known_first_party =
    swiftmock
    tests
combine_as_imports=True
include_trailing_comma = True
force_grid_wrap=0

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
ignore =
    # The default ignore list:
    D203,F401,E123,E203,W503,E501,E402
    #E121,E123,E126,E226,E24,E704,
    # Our additions:
    # E123: closing bracket does not match indentation of opening bracket’s line
    # E203: whitespace before ‘:’
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # D203: 1 blank line required before class docstring
    # E402: module level import not at top of file
    # E501: line too long (using B950 from flake8-bugbear)
    # F401: Module imported but unused
    # W503: line break before binary operator (not a pep8 issue, should be ignored)
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity=13

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.6
